--- a/Makefile.amini
+++ b/Makefile.amini
@@ -7,7 +7,11 @@ SDL_CONFIG := /opt/rs97-toolchain/usr/mipsel-buildroot-linux-musl/sysroot/usr/bi
 OBJS := amini/main.o cpu.o memory.o amini/video.o amini/input.o sound.o gui.o \
 	cheats.o zip.o cpu_threaded.o mips_stub.o amini/mygui.o sha1.o
 
-CFLAGS := `$(SDL_CONFIG) --cflags` -I. -Wall -Ofast -DZAURUS -mno-abicalls -mplt -mips32 -mlong-calls -fdata-sections -ffunction-sections
+CFLAGS := `$(SDL_CONFIG) --cflags` -I. -Wall -Ofast -mlong-calls -DZAURUS -mno-abicalls -mplt -mips32 -fdata-sections -ffunction-sections
+CFLAGS		+= -mno-relax-pic-calls -mlong32 -mlocal-sdata -mframe-header-opt -mno-check-zero-division -mfp32 -mgp32 -mno-embedded-data -fno-pic -mno-interlink-compressed -mno-mt -mno-micromips -mno-interlink-mips16
+CFLAGS += -fdata-sections -ffunction-sections -fno-threadsafe-statics  -fno-math-errno -funsafe-math-optimizations -fassociative-math -ffinite-math-only -fsingle-precision-constant -fsection-anchors -falign-functions=2 -mno-check-zero-division
+
+
 ASFLAGS := $(CFLAGS)
 LDFLAGS := `$(SDL_CONFIG) --libs` -lpthread -lz -lm -Wl,--as-needed -Wl,--gc-sections -flto -s
 
